# Coding-Agent-from-Scratch

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt
TUTORIAL/: 00-overview.md  01-llm-abstraction.md  02-streaming-output.md  03-multi-turn-conversation.md  04-tool-use-protocol.md  05-file-tools.md  06-system-prompt-agents-md.md  07-context-budget.md  08-error-handling.md  09-config-system.md  10-permission-system.md  11-prompt-caching.md  12-concurrent-tool-execution.md  13-sub-agent.md  14-agent-communication.md  15-concurrent-multi-agent.md  16-session-persistence.md  17-hooks-system.md  18-project-memory-files.md  19-plan-mode.md  20-session-memory.md  21-auto-memory.md  22-mcp-client.md  23-skills.md  24-skill-evolution.md  25-background-bash.md  26-sandbox-security.md  27-observability-tracing.md  28-agent-evaluation.md  29-semantic-code-search.md
TUTORIAL-ADVANCED/: 00-overview.md  01-context-references.md  02-smart-routing.md  03-usage-insights.md  04-redaction.md  05-skill-auto-generation.md  06-sqlite-fts.md  07-gateway.md  08-cron-system.md  09-rl-training.md  10-remote-agent-integration.md  11-computer-use.md
agent/: __init__.py  __main__.py  agent.py  auto_memory.py  budget.py  compact.py  computer_use.py  config.py  context.py  coordinator.py  hooks.py  mcp_client.py  permission.py  retry.py  session.py  session_memory.py  skill_evolution.py  skills.py
agent/llm/: __init__.py  anthropic_llm.py  base.py  openai_llm.py
agent/tools/: __init__.py  agent_tool.py  base.py  bash.py  edit.py  glob.py  grep.py  (+6 more)
(+7 files in other folders)
