[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-from-scratch"
version = "0.1.0"
description = "Build a Coding Agent from scratch, step by step. 23 tutorials demystifying every core mechanism."
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
